test/functions/iterators/diten/iteratorNoYield.good
iteratorNoYield.chpl:9: error: cannot iterate over values of type void
